# Email-Inbox-Manager

./: .gitignore  Dockerfile  README.md  inference.py  main.py  openenv.yaml  pyproject.toml  requirements.txt
email_env/: __init__.py  data_gen.py  env.py  graders.py  models.py  tasks.py
